--- a/sub/templates/sub/detail_stakeholder.html
+++ b/sub/templates/sub/detail_stakeholder.html
@@ -20,7 +20,7 @@
         <div class="container">
             <section class="about">
                     <div class="about-content">
-                    <h1>{{stakeholder.lname}}, {{stakeholder.fname}} {{stakeholder.mname|default_if_none:""}}</h1>
+                    <h1>{{stakeholder.fname}} {{stakeholder.mname|default_if_none:""}} {{stakeholder.lname}}</h1>
                     <!-- <p>{{project.proj_description}}</p> -->
                     <table>
                         <tr>
