--- a/sub/templates/sub/tbl_stakeholder.html
+++ b/sub/templates/sub/tbl_stakeholder.html
@@ -47,7 +47,7 @@
 			{% for stakeholder in stakeholders %}
 			<tbody>
 			  <tr>
-				<td>{{stakeholder.lname}}, {{stakeholder.fname}}</td>
+				<td>{{stakeholder.fname}} {{stakeholder.lname}}</td>
 				<td>{{stakeholder.sex}}</td>
 				<td>{{stakeholder.city}}</td>
 				<td>{{stakeholder.zipcode}}</td>
