--- a/static/css/secretariat.css
+++ b/static/css/secretariat.css
@@ -11,6 +11,11 @@ body {
     /* background-image: url("https://transparenttextures.com/patterns/brushed-alum.png"); */
 }
 
+#nav-placeholder{
+    position: relative;
+    z-index: 1;
+}
+
 #head {
     margin-left: auto;
     margin-right: auto;
