--- a/sub/templates/sub/add_iec.html
+++ b/sub/templates/sub/add_iec.html
@@ -18,7 +18,7 @@
     <body>
         <div id="nav-placeholder"></div>
         
-        <h3 style="font-weight: 700; font-size: 32px;">Add IEC Material</h3>
+        <h3 style="font-weight: 700; font-size: 32px; color: #008000">Add IEC Material</h3>
 
         <form method="POST" class="add_form" enctype="multipart/form-data">
             {% csrf_token %}
